<resources>
    <string name="app_name">Dota2Quiz</string>

    <string name="level_question_info_example">第1关, 1/5题</string>
    <string name="level_question_info">第%1$d关, %2$d/%3$d题</string>

    <string name="count_down_timer_example">19秒</string>
    <string name="count_down_timer">%1$d秒</string>
    <string name="count_down_timer_image_description">Count down timer image</string>

    <string name="question_image_description">Question image</string>

    <string name="question_example">以上图标属于哪个游戏?</string>

    <string name="option_button_0_example">英雄联盟</string>
    <string name="option_button_1_example">刀塔</string>
    <string name="option_button_2_example">魔兽争霸</string>
    <string name="option_button_3_example">我的世界</string>

    <string name="reveal_button">查看答案</string>
    <string name="continue_button">下一题</string>
    <string name="reset_button">重新开始</string>
</resources>