<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Level and Question Number Text View -->
    <TextView
        android:id="@+id/level_question_info_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/level_question_info_example"
        android:textAlignment="textStart"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/question_image"
        android:layout_width="wrap_content"
        android:layout_height="144dp"
        android:layout_marginTop="@dimen/margin_standard"
        android:contentDescription="@string/question_image_description"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/question_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/level_question_info_text"
        app:srcCompat="@drawable/dota2_icon" />

    <!-- Text View for the question -->
    <TextView
        android:id="@+id/question_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_standard"
        android:text="@string/question_example"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/question_image" />

    <!-- Vertical LinearLayout for buttons -->
    <LinearLayout
        android:id="@+id/options_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/question_text">

        <!-- Option Button 0 -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/option_button_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/option_button_background"
            android:text="@string/option_button_0_example"
            android:textSize="@dimen/text_size_standard" />

        <!-- Option Button 1 -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/option_button_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_option_button"
            android:background="@drawable/option_button_background"
            android:text="@string/option_button_1_example"
            android:textSize="@dimen/text_size_standard" />

        <!-- Option Button 2 -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/option_button_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_option_button"
            android:background="@drawable/option_button_background"
            android:text="@string/option_button_2_example"
            android:textSize="@dimen/text_size_standard" />

        <!-- Option Button 3 -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/option_button_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_option_button"
            android:background="@drawable/option_button_background"
            android:text="@string/option_button_3_example"
            android:textSize="@dimen/text_size_standard" />
    </LinearLayout>

    <!-- Reveal Button -->
    <Button
        android:id="@+id/reveal_button"
        android:layout_width="@dimen/button_width_standard"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:backgroundTint="@color/blue"
        android:text="@string/reveal_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/options_layout" />

    <!-- Continue Button -->
    <Button
        android:id="@+id/continue_button"
        android:layout_width="@dimen/button_width_standard"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_standard"
        android:backgroundTint="@color/green"
        android:text="@string/continue_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reveal_button" />

    <!-- Reset Button -->
    <Button
        android:id="@+id/reset_button"
        android:layout_width="@dimen/button_width_standard"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_standard"
        android:backgroundTint="@color/red"
        android:text="@string/reset_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/continue_button" />

</androidx.constraintlayout.widget.ConstraintLayout>